# Zandry-Backend

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pre_deploy.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: urls.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  user_model.py
apps/accounts/serializers/: __init__.py  auth_request_serializer.py  auth_response_serializer.py  register_company_serializer.py
apps/accounts/services/: __init__.py  register_company_service.py
apps/accounts/views/: __init__.py  login_view.py  logout_view.py  me_view.py  refresh_view.py  register_company_view.py
apps/appointments/: urls.py  utils.py
apps/appointments/migrations/: 0001_initial.py  0002_appointment_client.py  0003_appointmentverification.py
apps/appointments/models/: __init__.py  (+2 more)
apps/clients/: urls.py
apps/companies/: admin.py  urls.py
apps/dashboard/: permissions.py  urls.py
apps/notifications/: urls.py
apps/professionals/: admin.py  urls.py
apps/services/: admin.py  urls.py
apps/subscriptions/: admin.py  urls.py
common/: models.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
core/: settings.py  urls.py
orders/: models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py
products/: factory.py  models.py  tests.py  views.py
products/migrations/: 0001_initial.py
tests/: test_ci_smoke.py
(+98 files in other folders)
